--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -160,6 +160,7 @@ main > .recommended > article img {
     height: 140px;
     border-radius: 6px;
     margin-bottom: 10px;
+    object-fit: cover;
 }
 
 main > .recommended > article h2 {
@@ -184,6 +185,8 @@ main > .announcement .visual .image {
     height: 380px;
     
     position: relative;
+    object-fit: cover;
+
 }
 
 main > .announcement .visual .image .img {
@@ -194,6 +197,8 @@ main > .announcement .visual .image .img {
 
     width: 100%;
     height: 100%;
+    object-fit: cover;
+
 }
 
 
@@ -289,6 +294,7 @@ main .entities .entity img {
     height: 140px;
 
     border-radius: 6px;
+    object-fit: cover;
 }
 
 main .entities .entity .title {
